# speckit-hackathon-2

./: .gitignore  README.md
.claude/: settings.local.json
.claude/skills/better-auth-builder/: README.md  SKILL.md
.claude/skills/fastapi-builder/: README.md  SKILL.md  test_skill.py
.claude/skills/sqlmodel-builder/: SKILL.md  validate_skill.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
history/prompts/1-frontend-nextjs-todo/: 001-fix-todo-frontend-issues.tasks.prompt.md  (+12 more)
phase1/: README.md  pyproject.toml
phase1/src/phase1/: main.py  models.py  service.py
phase1/tests/: test_service.py
phase2/backend/: .gitignore  README.md  database.py  init_db.py  main.py  pyproject.toml  simple_test.py  test_app.py  test_password_fix.py
phase2/backend/api/: auth.py  tasks.py
phase2/backend/config/: logging.py
phase2/backend/dependencies/: auth.py
phase2/backend/models/: task.py  user.py
phase2/backend/schemas/: auth.py
phase2/backend/services/: task_service.py  user_service.py
phase2/backend/utils/: auth.py  security.py
phase2/frontend/: README.md  auth.ts  next.config.js  package-lock.json  package.json  tsconfig.json
specs/1-frontend-nextjs-todo/: analysis-report-after-updates.md  better-auth-backend-integration.md  better-auth-research.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-phase1-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-backend-jwt-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+54 files in other folders)
